feat: 支持Stream模式高级助理回调
